SOLID DRY рефакторинг
