# src/Dto/Video/VideoGalleryDto.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Dto\Video;
+
+readonly class VideoGalleryDto
+{
+    public function __construct(
+        public int $id,
+        public string $title,
+        public string $youtubeUrl
+    ) {
+    }
+}
